[package]
name = "bf_playground"
version = "1.0.0"
edition = "2021"
description = "A interpreter and Rust libary for brainf**k"
license-file = "LICENSE"
readme = "README.md"
authors = ["MZ"]
repository = "https://github.com/ZiomekMinecraft/BF-Playground"
keywords = ["interpreter", "rust", "library"]
categories = ["development-tools", "interpreters"]
publish = true

[profile.release]
opt-level = "z"

[dependencies]
